<resources>
    <string name="app_name">Benna</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete_cart">Clear cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_menu">Home</string>
    <string name="menu_food_list">Food List</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="popular">Popular</string>
    <string name="food_dtails_fragment">Food Details</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="car_fragment">Cart</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_view_order">View Orders</string>
    <string name="menu_gps">GPS</string>


    <string name="action_search">Search</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBKZzEnBjpQe1buX2I1qbrs-tbgpnsR768</string>
    <string name="update_info">Update Info</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_news">News</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_accueil">Accueil</string>



</resources>