<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_restaurant">


    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.fouadbahari.lellafood.View.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/restaurant_fragment" >
        <action android:id="@+id/action_nav_restaurant_to_nav_menu"
            app:destination="@+id/nav_menu"
            app:launchSingleTop="true"
            app:popUpTo="@+id/your_MainGraph_id"
            app:popUpToInclusive="true"/>
    </fragment>


    <fragment
        android:id="@+id/nav_menu"
        android:name="com.fouadbahari.lellafood.View.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.fouadbahari.lellafood.View.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />
    <fragment
        android:id="@+id/nav_fooddetails"
        android:name="com.fouadbahari.lellafood.View.ui.fooddetails.FoodDtailsFragment"
        android:label="@string/food_dtails_fragment"
        tools:layout="@layout/food_dtails_fragment" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.fouadbahari.lellafood.View.ui.cart.CartFragment"
        android:label="@string/car_fragment"
        tools:layout="@layout/cart_fragment" />

    <fragment
        android:id="@+id/nav_view_order"
        android:name="com.fouadbahari.lellafood.View.ui.vieworder.ViewOrderFragment"
        android:label="@string/menu_view_order"
        tools:layout="@layout/view_order_fragment" />


    <fragment
        android:id="@+id/nav_gps"
        android:name="com.fouadbahari.lellafood.View.ui.activategps.GPSFragment"
        android:label="@string/menu_gps"
        tools:layout="@layout/g_fragment"/>


</navigation>