<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:id="@+id/group_categories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_menu" />
    </group>

    <group android:id="@+id/news_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_news" />
    </group>

    <group android:id="@+id/group_cart"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />

    </group>

    <group android:id="@+id/group_view_order"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_baseline_view_order_24"
            android:title="@string/menu_view_order" />

    </group>

</menu>